feat: add condition on getStockValueAt if mouvemenet IN or OUT